--- a/templates/personal_account/login.html
+++ b/templates/personal_account/login.html
@@ -1,29 +1,8 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %}
-    <style>
-        .auth-buttons_reset {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            margin-top: 20px;
-        }
-        .auth-button {
-            text-align: center;
-            text-decoration: none;
-            padding: 10px 20px;
-            border: 1px solid #007bff;
-            color: #007bff;
-            border-radius: 5px;
-            transition: all 0.3s;
-        }
-        .auth-button:hover {
-            background-color: #007bff;
-            color: white;
-            text-decoration: none;
-        }
-    </style>
-
     <div class="banner_small">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}?v=3.0">
         <form method="post">  
             {% csrf_token %}  
             {% if form.non_field_errors %}  
